tests/snapshots/render_snapshots__comments-yaml-40.snap
---
source: tests/render_snapshots.rs
expression: "render_structured(&model, 40)"
---
# diple configuration.
#
# Every comment in this file must
  survive parsing: a reader opening a
  config
# reads the comments as much as the
  values.
# How wide the reading column is
  allowed to get.
width: 100  # 0 means "use the terminal
  width"
theme: dark  # dark | light | auto
# Folding defaults.
# Start with every section collapsed.
folds:
  collapsed: false
  # Deeper than this is never folded
    automatically.
  max_depth: 3
# Key bindings, as action -> key.
keys:
  quit: q
  # Vim users expect these two.
  down: j
  up: k
# Trailing comment at the end of the
  stream.
