tests/snapshots/render_snapshots__deeply-nested-json-40.snap
---
source: tests/render_snapshots.rs
expression: "render_structured(&deep, 40)"
---
{
  level0: {
    level1: {
      level2: {
        level3: {
          level4: {
            level5: {
              level6: {
                level7: {
                  level8: {
                    level9: {
                      level10: {
                        level11: {
                          level12: {
                            level13: {
                              level14: {
                                level15: {
                                  level16: {
                                    level17: {
                                      level18: {
                                        level19: {
                                          level20: {
                                            level21: {
                                              level22: {
                                                level23: "bottom"
