tests/snapshots/render_snapshots__k8s-deployment-yaml-40.snap
---
source: tests/render_snapshots.rs
expression: "render_structured(&model, width)"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: web
  labels:
    app: nginx
    tier: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        [0]
          name: nginx
          image: nginx:1.27-alpine
          ports:
            [0]
              containerPort: 80
              protocol: TCP
          env:
            [0]
              name: LOG_LEVEL
              value: info
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 5
      restartPolicy: Always
