tests/snapshots/render_snapshots__multi-document-yaml-40.snap
---
source: tests/render_snapshots.rs
expression: "render_structured(&model, 40)"
---
--- Document 1
  apiVersion: v1
  kind: ConfigMap
  metadata:
    name: app-config
  data:
    LOG_LEVEL: debug
    RETRIES: "3"
--- Document 2
  apiVersion: v1
  kind: Service
  metadata:
    name: app
  spec:
    type: ClusterIP
    ports:
      [0]
        port: 80
        targetPort: 8080
--- Document 3
  apiVersion: v1
  kind: Secret
  metadata:
    name: app-secret
  type: Opaque
  stringData:
    token: not-a-real-token
